  * Update: Links.path is renamed to Links.full_path and added three new
    attributes called ``path``, ``filename`` and ``extension``.
  * Update: Added new revisions to alembic to reflect the change in ``Links``
    table.
  * New: Added a new class called LocalSession to store session data in users
    local filesystem. Though it is going to be replaced with some other system
    like Beaker.

0.2.0.b4
--------

* WebUI:
  * Fix: Fixed the error in rendering of the **home** occurred when there is no
    user login information found in the request.
  * New: User thumbnails now can be changed.
  * New: Project thumbnails now can be changed.
  * New: ``content_list_projects`` now shows the project thumbnails.
  * New: ``content_list_users`` now shows the user thumbnails.
  * New: ``submitForm.js`` now enables all the disabled fields of the given
    form, and disables them back again upon error.
  * Fix: ``TagSelect.js`` will now correctly disable the child widgets if the
    ``disabled`` attribute is set to **true**.
  * New: Added ``fields`` javascript library which are a special group of input
    fields designed to be used with Stalker.
  * New: Added the first input field to stalker/fields, called ``tagField``. It
    is now possible to add a TagSelect field which is correctly updated by only
    two lines of code.
  * New: Added ``get_tags()`` to stalker.views.__init__ module. Because all the
    tags now should be created with the ``tagField`` the way to retrieve tags
    is the same, so this helper function will let you retrieve tags from the
    given request instance.
  * Add: Permissions page is added to Group Page.
  * Fix: dgrid object is declared from [Grid, Selection, Keyboard]. So it's
    possible to select a row and navigate by Keyboard.

0.2.0.b3
--------

* SOM:
  * Update: FilenameTemplate's are not ``strictly typed`` anymore.
  * Update: Removed the FilenameTemplate type initialization, FilenameTemplates
    do not depend on Types anymore.